--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         </div>
     </div>
     <footer style="background-color: blue; margin-top: 20px;">
-        &copy; Alright Reserved 2025
+        &copy; All right Reserved 2025
     </footer>
 </script>
 </body>
